--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2,20 +2,27 @@
   &__results {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     &__doctors {
+      background-color: white;
+      padding: 2%;
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 3%;
+      margin: 1%;
       border: 2px solid lightblue;
-      flex: 1;
-      width: 300px;
-      height: 300px;
+      width: 280px;
+      height: 180px;
       transition: all 200ms ease-in-out;
       &:hover {
         transform: scale(1.2);
+        cursor: pointer;
+      }
+      h1 {
+        font-size: 1.5em;
+        color: lightblue;
+        flex: 1;
       }
     }
   }
-
 }
