--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,27 +1,57 @@
+@import url('https://fonts.googleapis.com/css?family=Candal|Prata');
+
+
+
 .main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Candal', sans-serif;
+  &__form {
+    margin: 5%;
+    font-size: 2em;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    & input {
+      font-size: 1em;
+    }
+    & button {
+      height: 40px;
+      margin: 10px;
+      font-size: 0.8em;
+    }
+    & label {
+      margin: 10px;
+    }
+  }
   &__results {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     &__doctors {
-      background-color: white;
+      background-color: lightblue;
       padding: 2%;
       display: flex;
       justify-content: center;
       align-items: center;
       margin: 1%;
-      border: 2px solid lightblue;
-      width: 280px;
-      height: 180px;
+      border: 2px solid rgba(90, 116, 115, 0.69);
+      width: 260px;
+      height: 140px;
       transition: all 200ms ease-in-out;
       &:hover {
-        transform: scale(1.2);
+        transform: scale(1.1);
         cursor: pointer;
       }
       h1 {
         font-size: 1.5em;
-        color: lightblue;
+        color: white;
         flex: 1;
+      }
+      img {
+        border: solid 2px white;
       }
     }
   }
